# MPointers-2.0

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  test_basic.cpp  test_gc.cpp  test_gc_coalesce.cpp  test_linked_list.cpp  test_mpointer.cpp  test_mpointer_assign.cpp
memory_manager/: CMakeLists.txt  MemoryBlock.h  MemoryManagerService.cpp  MemoryManagerService.h  MemoryTable.h  main.cpp
mpointers/: MPointer.h  MPointerManager.h
proto/: memory.proto
src/: CMakeLists.txt  main.cpp  memory.grpc.pb.cc  memory.grpc.pb.h  memory.pb.cc  memory.pb.h
